tests/ui/issues/issue-25368.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-25368.rs:11:27
   |
LL |         tx.send(Foo{ foo: PhantomData });
   |                           ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `PhantomData`
   |
help: consider specifying the generic argument
   |
LL |         tx.send(Foo{ foo: PhantomData::<T> });
   |                                      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
